seggregating code according to categories
