# gen/CDEService.pb.gw.go
@@ -124,6 +124,40 @@ func local_request_CDEService_SearchText_0(ctx context.Context, marshaler runtim
 
 }
 
+func request_CDEService_CdeClick_0(ctx context.Context, marshaler runtime.Marshaler, client CDEServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TileId
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.CdeClick(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_CDEService_CdeClick_0(ctx context.Context, marshaler runtime.Marshaler, server CDEServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TileId
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.CdeClick(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterCDEServiceHandlerServer registers the http handlers for service CDEService to "mux".
 // UnaryRPC     :call CDEServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -173,6 +207,26 @@ func RegisterCDEServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		}
 
 		forward_CDEService_SearchText_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_CDEService_CdeClick_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_CDEService_CdeClick_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_CDEService_CdeClick_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -277,6 +331,26 @@ func RegisterCDEServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 
 	})
 
+	mux.Handle("POST", pattern_CDEService_CdeClick_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_CDEService_CdeClick_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_CDEService_CdeClick_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -286,6 +360,8 @@ var (
 	pattern_CDEService_Search_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"search"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_CDEService_SearchText_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"searchtext"}, "", runtime.AssumeColonVerbOpt(true)))
+
+	pattern_CDEService_CdeClick_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"cdecounter"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -294,4 +370,6 @@ var (
 	forward_CDEService_Search_0 = runtime.ForwardResponseMessage
 
 	forward_CDEService_SearchText_0 = runtime.ForwardResponseMessage
+
+	forward_CDEService_CdeClick_0 = runtime.ForwardResponseMessage
 )
